src/test/deca/context/valid/inheritance/subclass_access_public_field.deca
// Description :
// Sous-classe accède à un champ public de la super-classe
//
// Resultats :
// ok

class F {
    public int a = 10;
}
class G extends F {
    void test() {
        a = a + 1;
    }
}
