src/test/deca/context/invalid/fields/field_shadow_illegal_custom.deca
// Description :
// redéclaration d'un champ existant dans une sous-classe
//
// Resultats :
// Erreur contextuelle
// Ligne 10 : champ déjà défini dans la classe parent

class ParentField2 {
    int a;
}

class M extends ParentField2 {
    float a; // doit échouer
}
